--- a/src/app/experiences/experiences.component.scss
+++ b/src/app/experiences/experiences.component.scss
@@ -14,6 +14,7 @@ div {
     -moz-user-select: none;
     -webkit-user-select: none;
     user-select: none;
+    max-height: none;
 
     &:hover {
       opacity: 50%;
@@ -52,6 +53,7 @@ h1 {
         user-select: none;
         width: 20%;
         height: auto;
+        max-height: 100px;
         padding-top: 25px;
 
         &:hover {
@@ -85,6 +87,7 @@ h1 {
         user-select: none;
         width: 20%;
         height: auto;
+        max-height: 170px;
         padding-top: 25px;
 
         &:hover {
